--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceProtectedEditor.html
@@ -18,89 +18,72 @@
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 
-    <h3>Protected Accounts Editor</h3>
+    <h3><wicket:message key="ResourceProtectedEditor.label" /></h3>
 
     <!-- List of protected accounts -->
-    <h4>Protected Accounts</h4>
-    <dl class="dl-horizontal">
-        <dt>
-            <label>Accounts</label>
-        </dt>
-        <dd class="cap-dl-multivalue">
-            <div class="input-group">
-                <input type="text" class="form-control input-sm" value="first"/>
-                <span class="input-group-btn">
-                    <a class="btn btn-sm btn-primary" title="Edit">
-                        <i class="fa fa-pencil-square-o"/>
-                        <!-- TODO - this should trigger low part of this editor -->
-                    </a>
-                    <a class="btn btn-sm btn-danger" title="Remove">
-                        <i class="fa fa-minus"/>
-                    </a>
-                    <a class="btn btn-sm btn-success" title="Add">
-                        <i class="fa fa-plus"/>
-                    </a>
-                </span>
+    <div wicket:id="protectedContainer" class="panel-group" id="accordion">
 
+        <wicket:container wicket:id="repeater">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a wicket:id="accountLink" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            <span wicket:id="accountLinkName"></span>
+                        </a>
+                    </h4>
+                </div>
+
+                <div wicket:id="accountBodyContainer" id="collapseOne" class="panel-collapse collapse in">
+                    <div class="panel-body">
+
+                        <dl class="dl-horizontal">
+                            <dt>
+                                <label><wicket:message key="ResourceProtectedEditor.label.name" /></label>
+                            </dt>
+                            <dd>
+                                <input wicket:id="name" type="text" class="form-control input-sm" value="first"/>
+                            </dd>
+                        </dl>
+
+                        <dl class="dl-horizontal">
+                            <dt>
+                                <label><wicket:message key="ResourceProtectedEditor.label.uid" /></label>
+                            </dt>
+                            <dd>
+                                <input wicket:id="uid" type="text" class="form-control input-sm" value=""/>
+                            </dd>
+                        </dl>
+
+                        <h4><wicket:message key="ResourceProtectedEditor.label.filter" /></h4>
+                        <dl class="dl-horizontal">
+                            <dt>
+                                <label><wicket:message key="ResourceProtectedEditor.label.description" /></label>
+                            </dt>
+                            <dd>
+                                <textarea wicket:id="filterDescription" class="form-control input-sm" rows="2"></textarea>
+                            </dd>
+                        </dl>
+
+                        <dl class="dl-horizontal">
+                            <dt>
+                                <label><wicket:message key="ResourceProtectedEditor.label.filterClause" /></label>
+                            </dt>
+                            <dd>
+                                <input wicket:id="filterClause" type="text" class="form-control input-sm" value=""/>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
-        </dd>
-        <dd class="cap-dl-multivalue">
-            <div class="input-group">
-                <input type="text" class="form-control input-sm" value="second"/>
-                <span class="input-group-btn">
-                    <a class="btn btn-sm btn-primary" title="Edit">
-                        <i class="fa fa-pencil-square-o"/>
-                        <!-- TODO - this should trigger low part of this editor -->
-                    </a>
-                    <a class="btn btn-sm btn-danger" title="Remove">
-                        <i class="fa fa-minus"/>
-                    </a>
-                    <a class="btn btn-sm btn-success" title="Add">
-                        <i class="fa fa-plus"/>
-                    </a>
-                </span>
+        </wicket:container>
 
-            </div>
-        </dd>
-    </dl>
+    </div>
 
-    <h4>Edit account - "first"</h4>
-    <dl class="dl-horizontal">
-        <dt>
-            <label>Name</label>
-        </dt>
-        <dd>
-            <input type="text" class="form-control input-sm" value="first"/>
-        </dd>
-    </dl>
-
-    <dl class="dl-horizontal">
-        <dt>
-            <label>Uid</label>
-        </dt>
-        <dd>
-            <input type="text" class="form-control input-sm" value=""/>
-        </dd>
-    </dl>
-
-    <h4>Filter</h4>
-    <dl class="dl-horizontal">
-        <dt>
-            <label>Description</label>
-        </dt>
-        <dd>
-            <input type="text" class="form-control input-sm" value=""/>
-        </dd>
-    </dl>
-
-    <dl class="dl-horizontal">
-        <dt>
-            <label>Filter clause</label>
-        </dt>
-        <dd>
-            <input type="text" class="form-control input-sm" value=""/>
-        </dd>
-    </dl>
+    <div class="main-button-bar">
+        <a wicket:id="addButton" class="btn btn-success">
+            <span><wicket:message key="ResourceProtectedEditor.button.add" /></span>
+        </a>
+    </div>
 
 </wicket:panel>
 </html>
