ResourcwWizard - SchemaHandling editor update - Limitations and Mapping editors + several minor improvements.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.html
@@ -17,6 +17,7 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
+    <div wicket:id="limitationsEditor" />
 
     <h3><span wicket:id="label" ></span></h3>
 
