ResourceWizard - SchemaHandling editor update - ExpressionVariableDefinition editor + several minor editor improvements and additions

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/multivalue/MultiValueTextPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/form/multivalue/MultiValueTextPanel.html
@@ -20,7 +20,7 @@
         <wicket:container wicket:id="repeater">
             <dd class="cap-dl-multivalue">
                 <div class="input-group">
-                    <input wicket:id="input" type="text" class="form-control input-sm" value="java"/>
+                    <input wicket:id="input" type="text" class="form-control input-sm" />
 
                     <span wicket:id="buttonGroup" class="input-group-btn">
                         <a wicket:id="minus" class="btn btn-sm btn-danger" title="Remove">
