ResourceWizard - SchemaHandling editor update - work on expression editor in mappings and iteration editor. Still not finished completely.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.html
@@ -114,7 +114,8 @@
             <label><wicket:message key="ResourceAttributeEditor.label.matchingRule" /></label>
         </dt>
         <dd>
-            <input wicket:id="matchingRule" type="text" class="form-control input-sm" value=""/>
+            <select wicket:id="matchingRule" class="form-control input-sm"></select>
+            <!--<input wicket:id="matchingRule" type="text" class="form-control input-sm" value=""/>-->
         </dd>
     </dl>
 
