--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.html
@@ -80,6 +80,24 @@
 
                     <dl class="dl-horizontal">
                         <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="tokenExpressionLanguage" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="tokenExpressionPolicyRef" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.expression" /></label>
                         </dt>
                         <dd>
@@ -139,6 +157,24 @@
 
                     <dl class="dl-horizontal">
                         <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="preExpressionLanguage" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="preExpressionPolicyRef" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
                             <label><wicket:message key="ResourceIterationEditor.label.expression" /></label>
                         </dt>
                         <dd>
@@ -193,6 +229,24 @@
                         </dt>
                         <dd>
                             <select wicket:id="postExpressionType" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.language" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="postExpressionLanguage" class="form-control input-sm"></select>
+                        </dd>
+                    </dl>
+
+                    <dl class="dl-horizontal">
+                        <dt>
+                            <label><wicket:message key="ResourceIterationEditor.label.policyRef" /></label>
+                        </dt>
+                        <dd>
+                            <select wicket:id="postExpressionPolicyRef" class="form-control input-sm"></select>
                         </dd>
                     </dl>
 
