--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.html
@@ -65,9 +65,13 @@
             <div class="form-group" wicket:id="target" />
 
             <div class="form-group" wicket:id="expressionType" />
+            <div class="form-group" wicket:id="expressionLanguage" />
+            <div class="form-group" wicket:id="expressionValuePolicyRef" />
             <div class="form-group" wicket:id="expression" />
 
             <div class="form-group" wicket:id="conditionType" />
+            <div class="form-group" wicket:id="conditionLanguage" />
+            <div class="form-group" wicket:id="conditionValuePolicyRef" />
             <div class="form-group" wicket:id="condition" />
 
             <p align="right">
